--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.keju.park" android:versionCode="1" android:versionName="1.0">
-
 	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
 	<!-- 这个权限用于进行网络定位 -->
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -24,7 +23,7 @@
 	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 	<!-- 允许应用读取低级别的系统日志文件 -->
 	<uses-permission android:name="android.permission.READ_LOGS" />
-	<!-- 使用导航功能所需权限 -->
+	<!--使用导航功能所需权限 -->
 	<uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
 	<uses-permission android:name="android.permission.ACCES_MOCK_LOCATION" />
 	<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
@@ -36,85 +35,68 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
+
 	<!-- 科大讯飞 -->
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
 
-	<application android:name=".CommonApplication"
-		android:allowBackup="true" android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name" android:theme="@android:style/Theme.Light.NoTitleBar">
+	<application android:allowBackup="true" android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name" android:name=".CommonApplication"
+		android:theme="@android:style/Theme.Light.NoTitleBar">
+
 		<activity android:name="com.keju.park.ui.LogoActivity"
-			android:label="@string/app_name" android:theme="@style/Theme.splash"
+			android:theme="@style/Theme.splash" android:label="@string/app_name"
 			android:windowSoftInputMode="stateHidden|adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+		
         <activity android:name="com.keju.park.ui.MainActivity"
 			android:windowSoftInputMode="stateHidden|adjustPan"
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
-        <activity
-            android:name="com.keju.park.ui.searchparking.SearchParkingActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustPan" />
-        <activity
-            android:name="com.keju.park.ui.searchparking.VoiceSearchActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.keju.park.ui.searchparking.HistorySearchParking"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.keju.park.ui.searchparking.ParkingListActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.keju.park.ui.searchparking.ParkingDetailsActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.keju.park.ui.searchparking.ShowRouteActivity"
-            android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name="com.keju.park.ui.searchparking.BNavigatorActivity"
-            android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name="com.keju.park.ui.searchparking.VoiceDialogueActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" >
-        </activity>
+		<activity android:name="com.keju.park.ui.searchparking.VoiceSearchActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
 
-        <!-- 更多界面 -->
-        <activity
-            android:name="com.keju.park.ui.more.AboutMeActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name="com.keju.park.ui.more.ContactMeActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name="com.keju.park.ui.more.IdeaFeedBackActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" >
-        </activity>
+		<activity android:name="com.keju.park.ui.searchparking.HistorySearchParking"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
+		<activity android:name="com.keju.park.ui.searchparking.ParkingListActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
 
-        <!-- 百度定位的key -->
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"/>
-        <!-- 友盟提供的服务 -->
+		<activity android:name="com.keju.park.ui.searchparking.ParkingDetailsActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
+
+		<activity android:name="com.keju.park.ui.searchparking.ShowRouteActivity"
+			android:screenOrientation="portrait"
+			android:configChanges="orientation|screenSize|keyboard|keyboardHidden"></activity>
+		<activity android:name="com.keju.park.ui.searchparking.BNavigatorActivity"
+			android:screenOrientation="portrait"
+			android:configChanges="orientation|screenSize|keyboard|keyboardHidden"></activity>
+
+		<activity android:name="com.keju.park.ui.searchparking.VoiceDialogueActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
+
+
+		<!-- 更多界面 -->
+		<activity android:name="com.keju.park.ui.more.AboutMeActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
+		<activity android:name="com.keju.park.ui.more.ContactMeActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
+		<activity android:name="com.keju.park.ui.more.IdeaFeedBackActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
+
+		<!-- 定位服务 -->
+		<service android:name="com.baidu.location.f" android:enabled="true"
+			android:process=":remote">
+		</service>
+		<!-- 百度定位的key -->
+		<meta-data android:name="com.baidu.lbsapi.API_KEY"
+			android:value="E3I6SxmOdPW9nEbpbYy8bd9B" />
+		<!-- 友盟提供的服务 -->
         <service
             android:name="com.umeng.common.net.DownloadingService"
             android:process=":DownloadingService" >
@@ -128,13 +110,7 @@
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="5377122856240b8865054d1c" />
-        <!--
-            <meta-data
-            android:name="UMENG_CHANNEL"
-            android:value="Channel ID" />
-        -->
-    </application>
-    <!-- E3I6SxmOdPW9nEbpbYy8bd9B 周勇 -->
-    <!-- 9VIVbq1eLaebspsk79zRWgrk -->
-
+	</application>
+	<!-- E3I6SxmOdPW9nEbpbYy8bd9B 周勇 -->
+	<!--9VIVbq1eLaebspsk79zRWgrk -->
 </manifest>
